--- a/src/assets/scss/_product-gallery.scss
+++ b/src/assets/scss/_product-gallery.scss
@@ -14,6 +14,7 @@
   }
   .main-product-gallery {
     cursor: zoom-in;
+    margin: 0;
     &:first-child {
       grid-column: span 4;
     }
@@ -26,6 +27,7 @@
     scroll-snap-type: x proximity;
     .product-gallery {
       cursor: zoom-in;
+      margin: 0;
       width: 6rem;
       flex-shrink: 0;
       scroll-snap-align: start;
